# AudioInspector

./: .gitignore  CMakeLists.txt  README.md  buildspec.json
src/: audio_inspector_core.cpp  audio_inspector_core.h  audio_inspector_widget.cpp  audio_inspector_widget.h  plugin-main.cpp  plugin-support.c.in
